Fixed bug #43045 (SOAP encoding violation on "INF" for type double/float)